# elastic-experiments

./: .gitignore  README.md
elastic-loader-demo/: .env  Cargo.toml  README.md
elastic-loader-demo/src/: bulk_load.rs  bulk_tally.rs  elastic_load.rs  index_results.rs  main.rs  motor_vehicle_crash.rs  single_load.rs
elastic-loader-demo/winbuild/: Dockerfile
