[package]
name = "elastic-loader-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
csv = "1.1"
async-trait = "0.1.63"